--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
+    <title>User Privilege Checker</title>
 </head>
 <body>
-    <h1>User <%= username %> does not have privilege</h1>
-    <a href="/">Back</a>
+    <h1>Пользователь <%= username %> не найден</h1>
+    <a href="/">Назад</a>
 </body>
 </html>
