--- a/views/privilege.ejs
+++ b/views/privilege.ejs
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Privilege</title>
+    <title>User Privilege Checker</title>
 </head>
 <body>
-    <h1>User <%= username %> has the privilege <%= privilege %></h1>
-    <a href="/">Back</a>
+    <h1>Пользователь <%= username %> имеет привилегию <%= privilege %></h1>
+    <a href="/">Назад</a>
 </body>
 </html>
